--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "prestart": "npm i",
     "start": "gulp",
-    "test": "karma start"
+    "test": "karma start",
+    "test-browserstack": "karma start karma_browserstack.conf.js"
   },
   "clean": [
     "dist/"
@@ -78,6 +79,8 @@
     "karma": "^1.4.1",
     "karma-chrome-launcher": "^2.0.0",
     "karma-coverage": "^1.1.1",
-    "karma-jasmine": "^1.0.2"
+    "karma-jasmine": "^1.0.2",
+    "karma-junit-reporter": "^1.2.0",
+    "karma-browserstack-launcher": "^1.3.0"
   }
 }
