--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "prestart": "npm i",
     "start": "gulp",
+    "jenkins-build": "gulp deploy",
     "test": "karma start",
     "test-browserstack": "karma start karma_browserstack.conf.js"
   },
