--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "dfp-web-advertising",
-  "version": "4.0.3",
+  "version": "4.0.4-0",
   "description": "DFP web Library",
   "main": "gulpfile.js",
   "author": "Tar.get() Squad",
   "license": "Apache-2.0",
-  "repository" : {
-    "type" : "git",
-    "url" : "https://github.com/depersgroep/dfp-web-advertising.git"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/depersgroep/dfp-web-advertising.git"
   },
   "scripts": {
     "prestart": "npm i",
