--- a/package.json
+++ b/package.json
@@ -1,13 +1,20 @@
 {
   "name": "dfp-web-advertising",
-  "version": "4.0.3",
+  "version": "4.0.4-0",
   "description": "DFP web Library",
   "main": "gulpfile.js",
-  "author": "Tar.get()",
+  "author": "Tar.get() Squad",
+  "license": "Apache-2.0",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/depersgroep/dfp-web-advertising.git"
+  },
   "scripts": {
     "prestart": "npm i",
     "start": "gulp",
-    "test": "karma start"
+    "jenkins-build": "gulp deploy",
+    "test": "karma start",
+    "test-browserstack": "karma start karma_browserstack.conf.js"
   },
   "clean": [
     "dist/"
@@ -78,6 +85,8 @@
     "karma": "^1.4.1",
     "karma-chrome-launcher": "^2.0.0",
     "karma-coverage": "^1.1.1",
-    "karma-jasmine": "^1.0.2"
+    "karma-jasmine": "^1.0.2",
+    "karma-junit-reporter": "^1.2.0",
+    "karma-browserstack-launcher": "^1.3.0"
   }
 }
