--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "eslint": "^4.18.2",
     "eslint-config-persgroep": "^2.0.0",
     "event-stream": "^3.3.4",
-    "gulp": "^3.9.1",
+    "gulp": "^4.0.0",
     "gulp-concat": "^2.6.0",
     "gulp-copy": "^0.0.2",
     "gulp-eslint": "^4.0.2",
@@ -82,11 +82,14 @@
     "gulp-uglify": "^2.0.0",
     "gulp-util": "^3.0.7",
     "jasmine-core": "^2.5.2",
-    "karma": "^1.4.1",
+    "karma": "^2.0.4",
+    "karma-browserstack-launcher": "^1.3.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-coverage": "^1.1.1",
+    "karma-edge-launcher": "^0.4.2",
+    "karma-ie-launcher": "^1.0.0",
     "karma-jasmine": "^1.0.2",
     "karma-junit-reporter": "^1.2.0",
-    "karma-browserstack-launcher": "^1.3.0"
+    "karma-viewport": "^1.0.2"
   }
 }
