LAT-1187 fix krux

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 			{
 				"src": [
 					"src/utils/storage.js",
+					"src/dmp/dfp-dmp.js",
 					"src/dmp/dfp-krux.js"
 				],
 				"dest": "dist/",
