--- a/package.json
+++ b/package.json
@@ -74,13 +74,13 @@
 		}
 	},
 	"devDependencies": {
-		"del": "^4.1.1",
-		"eslint": "^5.16.0",
+		"del": "^5.0.0",
+		"eslint": "^6.0.1",
 		"eslint-config-persgroep": "^2.0.0",
 		"gulp": "^4.0.2",
 		"gulp-concat": "^2.6.0",
 		"gulp-copy": "^4.0.1",
-		"gulp-eslint": "^5.0.0",
+		"gulp-eslint": "^6.0.0",
 		"gulp-header": "^2.0.7",
 		"gulp-plumber": "^1.2.1",
 		"gulp-rename": "^1.4.0",
@@ -99,6 +99,7 @@
 		"karma-jasmine": "^2.0.1",
 		"karma-junit-reporter": "^1.2.0",
 		"karma-viewport": "^1.0.4",
+		"lodash": "^4.17.14",
 		"merge-stream": "^2.0.0"
 	}
 }
